2003-05-05  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/totem-random.pl: added, should make people on #111942 happy
	* data/totem.keys: added application/ogg to the list of supported
	mime-types

2003-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (setup_config_video),
	(bacon_video_widget_realize): setup the colour key for Xv as dark dark
	dark dark dark dark dark dark dark black, looks nicer
	* src/totem-preferences.c: (visual_menu_changed): only whinge about
	restarting totem if the visual is actually changed
	* src/totem.c: (video_widget_create):
	* src/vanity.c: (video_widget_create): remove the hard-coded size for
	the frame containing the video widget so that we can resize to sizes
	smaller than the default size, it would make some zoom settings look
	like they weren't working

2003-05-03  Bastien Nocera  <hadess@hadess.net>

	* configure.in: take the results of AC_PATH_X into account for the
	tests for headers (Closes: #112015)

2003-05-02  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* data/totem.schemas.in:
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_instance_init), (bacon_video_widget_realize),
	(bacon_video_widget_set_show_visuals),
	(bacon_video_widget_get_visuals_list),
	(bacon_video_widget_set_visuals),
	(bacon_video_widget_set_visuals_quality):
	* src/bacon-video-widget.h:
	* src/gtk-playlist.c:
	* src/totem-preferences.c: (on_checkbutton2_toggled),
	(visual_menu_changed), (visual_quality_menu_changed),
	(totem_setup_preferences), (totem_preferences_tvout_setup),
	(totem_preferences_visuals_setup):
	* src/totem-preferences.h:
	* src/totem.c: (video_widget_create): added options to configure the
	visual plugin used, and the quality of them (size, frames per second)
	(Closes: #107244 and #109166)

2003-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/vanity.c: (video_widget_create): added error checking

2003-04-30  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: