@@ -1,3 +1,14 @@
+2003-05-06  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-xine.c: (bacon_video_widget_realize): don't
+	try to create a goom if we don't have an audio ouput
+	* src/gtk-playlist.c: (gtk_playlist_add_mrl): application/ogg and
+	application/octet-stream are good mimetypes for us (octet streams can
+	happen with streaming content)
+	* src/totem-statusbar.c: (totem_statusbar_update_time):
+	* src/totem.c: (update_mrl_label), (update_current_time): show
+	"Streaming" when we have a file for which we don't know the length
+
 2003-05-05  Bastien Nocera  <hadess@hadess.net>
 
 	* data/Makefile.am:
